# pydepin

./: .gitignore  README.md  pyproject.toml
pydepin/: cli.py  cli_ast.py  cli_lsp.py  core.py  core_lsp.py
