[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pydepin"
version = "0.2.0"
description = "Highlight file-dependency reachability in Python projects"
readme = "README.md"
authors = [{name="Konstantinos", email="kons.papagiannopoulos@gmail.com"}]
license = {text = "MIT"}
dependencies = [
  "networkx>=2.8",
  "click>=8.0",
  "rich>=12.0",
  "charset_normalizer>=3.4.2"
]

[project.scripts]
pydepin = "pydepin.cli:main"

