[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pydepin"
version = "0.5.0"
description = "Highlight file-dependency reachability in Python projects"
readme = "README.md"
authors = [{name="Konstantinos", email="kons.papagiannopoulos@gmail.com"}]
license = {text = "MIT"}
dependencies = [
  "networkx>=2.8",
  "click>=8.0",
  "rich>=12.0",
  "typer>=0.15.3"
]

[project.optional-dependencies]
lsp = ["jedi>=0.18.0"]

[project.scripts]
pydepin     = "pydepin.cli_ast:app"
pydepin-lsp = "pydepin.cli_lsp:app"
